sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: not found: value x
  while(ecart > 1 || !x){
                      ^