sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart:Int = getNombreValeurs()
  while(ecart > 1 || !x){
    var x:Boolean = false
    if(ecart > 1){
      ecart = (ecart.toDouble/1.3).toInt
    }
    var i:Int = 0
    while(i+ecart < getNombreValeurs()){
      if(plusPetit(i+ecart,i)){
        echange(i,i+ecart)
        x = true
      }
      i += 1
    }
  }
}